--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             More tasks
         </md-button>
 
-        <md-button class="add-task md-fab md-mini md-primary" aria-label="Use Android" ng-click="addTask($event)">
+        <md-button class="add-task md-fab md-mini md-primary" ng-click="addTask($event)">
             <i class="icons8-plus" style="line-height:0"></i>
         </md-button>
     </md-content>
@@ -105,7 +105,7 @@
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
-<script src="bower_components/angular-cookie/angular-cookie.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
 <script src="js/controllers.js"></script>
 </body>
