correct bug in firefox

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h1 class="title">Edit project</h1>
         </md-toolbar>
 
-        <md-content layout-padding>
+        <md-content layout-padding flex>
             <md-input-container class="md-block" md-no-float>
                 <input ng-model="projectNameValue" placeholder="Project name" ng-value="currentProject.title" autofocus>
             </md-input-container>
